# dotfiles

./: .gitignore  README.md  pkglist-aur.txt  pkglist.txt  pkglist_aur.txt
config/gtk-3.0/: settings.ini
config/gtk-4.0/: settings.ini
config/hypr/: colors-hyprland  colors-hyprlock  hyprland.conf  hyprlock.conf  hyprpaper.conf
config/kitty/: kitty.conf
config/mako/: config
config/nvim/: .gitignore  init.lua  long_message.txt  pyproject.toml
config/nvim/lua/config/: neopywal.lua
config/nvim/lua/config/lspconfig/: init.lua  lua_ls.lua
config/nvim/lua/core/: autocmd.lua  init.lua  keymaps.lua
config/nvim/lua/lsp_config/: init.lua  marksman.lua
config/nvim/lua/plugins/: init.lua
config/nvim/lua/plugins/editor/: harpoon.lua  init.lua  jupytext.lua  molten.lua  oil.lua  opencode.lua
config/nvim/lua/plugins/git/: init.lua
config/nvim/lua/plugins/lsp/: init.lua  lsp.lua  lspconfig.lua
config/nvim/lua/plugins/navigation/: fzf.lua  init.lua  telescope.lua  treesitter.lua
config/nvim/lua/plugins/ui/: catppuccin.lua  init.lua  neopywal.lua
config/nvim/lua/plugins/usage/: init.lua
config/rofi/: rofi-colors.rasi  rofi-launcher-config.rasi  rofi-powermenu-config.rasi  rofi-simple-config.rasi  rofi-wallpaper-sel.rasi
config/wallust/: wallust.toml
config/waybar/: battery.sh  config.jsonc  current-theme.css  style.css  wal-all  walrgb.sh  waybar-colours.css
config/zsh/: .p10k.zsh  (+2 more)
git/: .gitconfig
hypr/: hyprland.conf
nvim/: init.lua
rofi/: config.rasi
scripts/: cycle-audio.sh
wezterm/: constants.lua  wezterm.lua
zsh/: .zcompdump  .zshrc
(+51 files in other folders)
