[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ArtLiathain", email = "art.oliathain@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.9.0",
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    "jupytext>=1.19.1",
    "pynvim>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
